--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <!-- Meta -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Site / page description" />
-<meta name="author" content="Stanford Department or Group" />
+<meta name="description" content="My personal portfolio." />
+<meta name="author" content="Philip Pfeffer" />
 <!-- These meta tags are used when someone shares a link to this page on Facebook,
      Twitter or other social media sites. All tags are optional, but including them
      and customizing the content for specific sites can help the visibility of your
@@ -79,7 +79,7 @@
     
     <!-- Brandbar snippet start -->
     <div id="brandbar">
-      <div class="container"> <a href="http://www.stanford.edu"> <img src="assets/lagunita/images/brandbar-stanford-logo@2x.png" alt="Stanford University" width="152" height="23"> </a> </div>
+      <div class="container"> <a href="https://stanford.edu/~philpfef/portfolio/"> <img src="assets/lagunita/images/block-s-white.png" alt="Stanford University" width="152" height="23"> </a> </div>
       <!-- .container end --> 
     </div>
     <!-- #brandbar end --> 
