--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     
     <!-- Brandbar snippet start -->
     <div id="brandbar">
-      <div class="container"> <a href="https://stanford.edu/~philpfef/portfolio/"> <img src="assets/lagunita/images/block-s-white.png" alt="Stanford University" width="152" height="23"> </a> </div>
+      <!-- <div class="container"> <a href="https://stanford.edu/~philpfef/portfolio/"> <img src="assets/lagunita/images/block-s-white.png" alt="Stanford University Logo" width="152" height="23"> </a> </div> -->
+      <p> Philip Pfeffer </p>
       <!-- .container end --> 
     </div>
     <!-- #brandbar end --> 
