--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- Brandbar snippet start -->
     <div id="brandbar">
       <!-- <div class="container"> <a href="https://stanford.edu/~philpfef/portfolio/"> <img src="assets/lagunita/images/block-s-white.png" alt="Stanford University Logo" width="152" height="23"> </a> </div> -->
-      <p> Philip Pfeffer </p>
+      <div class="name"> <a href="https://stanford.edu/~philpfef/portfolio/"> <p> Philip Pfeffer </p> </div>
       <!-- .container end --> 
     </div>
     <!-- #brandbar end --> 
